--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
         </ul>
     </nav>
 
+    <div id="homePage" class="page active">
+        <section id="home" class="hero">
+            <div class="hero-content">
+                <h1>STRANGER THINGS</h1>
+                <p>When a young boy vanishes, a small town uncovers a mystery involving secret experiments</p>
+            </div>
+        </section>
+
 
 
 
