--- a/index.html
+++ b/index.html
@@ -30,6 +30,46 @@
             </div>
         </section>
 
+        <section id="about">
+            <div class="container">
+                <h2>About The Show</h2>
+                <div class="about-content">
+                    <div class="about-2">
+                        <p class="paragraph-title">
+                            In 1980s Indiana, a group of young friends witness supernatural forces and secret government exploits. 
+                            As they search for answers, the children unravel a series of extraordinary mysteries involving 
+                            secret government experiments, terrifying supernatural forces, and one very strange little girl.
+                        </p>
+                        <p class="paragraph-title">
+                            The series is a love letter to the '80s classics that captivated a generation, blending horror, 
+                            science fiction, and heartfelt coming-of-age drama.
+                        </p>
+                    </div>
+                    <div class="show-info">
+                        <h3>Show Information</h3>
+                        <div class="info-grid">
+                            <div class="info-item">
+                                <strong>Genre</strong>
+                                <span>Sci-Fi / Horror</span>
+                            </div>
+                            <div class="info-item">
+                                <strong>Release Year</strong>
+                                <span>2016</span>
+                            </div>
+                            <div class="info-item">
+                                <strong>Seasons</strong>
+                                <span>4 (+ Season 5)</span>
+                            </div>
+                            <div class="info-item">
+                                <strong>Rating</strong>
+                                <span> 8.7/10</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
 
 
