--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
             </div>
         </section>
 
+        <section id="characters">
+            <div class="container">
+                <h2>Main Characters</h2>
+                <div class="characters-grid" id="charactersContainer"></div>
+            </div>
+        </section>
+
 
 
 
