--- a/index.html
+++ b/index.html
@@ -77,6 +77,38 @@
             </div>
         </section>
 
+        <section id="episodes">
+            <div class="container">
+                <h2>Featured Episodes</h2>
+                <div class="episodes-grid">
+                    <div class="episode-card">
+                        <h4>S1E1: The Vanishing of Will Byers</h4>
+                        <p>On his way home from a friend's house, young Will sees something terrifying.</p>
+                    </div>
+                    <div class="episode-card">
+                        <h4>S1E8: The Upside Down</h4>
+                        <p>Eleven makes a sacrifice to save her friends as the final confrontation unfolds.</p>
+                    </div>
+                    <div class="episode-card">
+                        <h4>S2E9: The Gate</h4>
+                        <p>The gang comes together to save Hawkins and close the gate to the Upside Down.</p>
+                    </div>
+                    <div class="episode-card">
+                        <h4>S3E8: The Battle of Starcourt</h4>
+                        <p>The Mind Flayer's plan comes to fruition at Starcourt Mall.</p>
+                    </div>
+                    <div class="episode-card">
+                        <h4>S4E7: The Massacre at Hawkins Lab</h4>
+                        <p>Eleven relives her past and confronts the truth about her powers.</p>
+                    </div>
+                    <div class="episode-card">
+                        <h4>S4E9: The Piggyback</h4>
+                        <p>The epic season finale as Hawkins faces its greatest threat yet.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
 
 
