--- a/index.html
+++ b/index.html
@@ -109,8 +109,45 @@
             </div>
         </section>
 
+        <footer>
+            <p class="footer-text-2">&copy; 2024 Stranger Things Fan Site | Not affiliated with Netflix</p>
+            <p class="footer-text">Created for Educational Purposes</p>
+        </footer>
+    </div>
 
+    <div id="characterPage" class="page">
+        <div class="char-hero">
+            <div class="char-emoji" id="charEmoji"></div>
+        </div>
 
+        <div class="char-content">
+            <div class="char-header">
+                <h1 class="char-name" id="charName"></h1>
+                <p class="char-role-big" id="charRole"></p>
+                <p class="char-actor">Portrayed by <strong id="charActor"></strong></p>
+                <p id="charFirstAppearance"></p>
+            </div>
 
+            <div class="char-section">
+                <h3>Biography</h3>
+                <p class="char" id="charBio"></p>
+            </div>
+
+            <div class="char-section">
+                <h3>Character Traits</h3>
+                <div class="traits" id="charTraits"></div>
+            </div>
+
+            <div class="quote-box" id="charQuote"></div>
+        </div>
+
+        <footer>
+            <p class="footer-text-2">&copy; 2024 Stranger Things Fan Site | Not affiliated with Netflix</p>
+            <p class="footer-text">Created for Educational Purposes</p>
+        </footer>
+    </div>
+
+        <script src="code.js">
+    </script>
 </body>
 </html>
