--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a onclick="scrollToSection('about')">About</a></li>
             <li><a onclick="scrollToSection('characters')">Characters</a></li>
             <li><a onclick="scrollToSection('episodes')">Episodes</a></li>
-            <li><a class="button">Login</a></li>
+            <li><a class="button" href="login.html">Login</a></li>
         </ul>
     </nav>
 
